# bean

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  devenv.nix
all/: CMakeLists.txt
cmake/: tools.ccache.cmake  tools.code-coverage.cmake  tools.sanitizers.cmake  tools.static-analyzers.cmake  tools.static-analyzers.disable.cmake
config/: static_config.yaml
doc/: CMakeLists.txt  Doxyfile
exe/: CMakeLists.txt
exe/source/: main.cpp
include/beanbackend/: greeter.h
include/beanbackend/http_handlers/: greeter_handler.h
scripts/: config-cmake.py  config-cmake.sh  gen-commands.py  gen-commands.sh
scripts/ci/: code-coverage.sh  doc.sh  format.sh  static-analyzer.sh  test.sh
source/: greeter.cpp
source/http_handlers/: greeter_handler.cpp
test/: CMakeLists.txt
test/source/: greeter.cpp
